--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -723,7 +723,7 @@
     animation: inpit 1s;
 }
 .slider__form{
-    background-image: url(/IMG/sliderHome/img1.jpg);
+    background-image: url(../IMG/sliderHome/img1.jpg);
     animation: changeIMG 5s infinite alternate;
     width: 100%;
     background-repeat: no-repeat;
@@ -742,15 +742,15 @@
 }
 @keyframes changeIMG {
     0%{
-    background-image: url(/IMG/sliderHome/img1.jpg);
+    background-image: url(../IMG/sliderHome/img1.jpg);
 
     }
     50%{
-        background-image: url(/IMG/sliderHome/img2.jpg);
+        background-image: url(../IMG/sliderHome/img2.jpg);
 
     }
     100%{
-     background-image: url(/IMG/sliderHome/img3.jpg);
+     background-image: url(../IMG/sliderHome/img3.jpg);
 
     }
 }
@@ -771,7 +771,7 @@
 
 /* sidebar */
 .sidebar {
-    /* background-image: url(/IMG/sidebar/bgmain.jpg); */
+    /* background-image: url(../IMG/sidebar/bgmain.jpg); */
     background-color: #eee;
     width: 100%;
     height: 50%;
@@ -1067,7 +1067,7 @@
 /* mentor */
 
 .mentor {
-    background-image: url(/IMG/sliderHome/mentor.png);
+    background-image: url(../IMG/sliderHome/mentor.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1089,7 +1089,7 @@
     height: 120px;
     width: 120px;
     border-radius: 100%;
-    background-image: url(/IMG/mentor1.jpg);
+    background-image: url(../IMG/mentor1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1099,28 +1099,28 @@
 
 @keyframes changeMentor {
     0% {
-        background-image: url(/IMG/mentor1.jpg);
+        background-image: url(../IMG/mentor1.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
     }
 
     30% {
-        background-image: url(/IMG/mentor2.jpg);
+        background-image: url(../IMG/mentor2.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
     }
 
     50% {
-        background-image: url(/IMG/mentor3.jpg);
+        background-image: url(../IMG/mentor3.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
     }
 
     100% {
-        background-image: url(/IMG/mentor4.jpg);
+        background-image: url(../IMG/mentor4.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -1142,7 +1142,7 @@
 }
 
 .main1__wellcom {
-   background-image: url(/IMG/bgShopWelcom.jpg);
+   background-image: url(../IMG/bgShopWelcom.jpg);
     width: 100%;
     height: 450px;
     margin-top: -35px;
