--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -708,7 +708,7 @@
    
     width: 100%;
     height: 500px;
-    background-image: url(/IMG/img-aboutUs/slide.jpg);
+    background-image: url(../IMG/img-aboutUs/slide.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
