--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1333,7 +1333,7 @@ center_two{
 }
 /* .ad:hover{
   opacity: 0.5;
-  background-image: url(/img/lum2.jpg);
+  background-image: url(../img/lum2.jpg);
 } */
 .two-1{
     position:absolute;
@@ -1486,7 +1486,7 @@ center_two{
     align-items: center;
     width: 100%;
     height: 320px;
-    background-image: url(/IMG/Masory/slide.jpg);
+    background-image: url(../IMG/Masory/slide.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
